<resources>
    <string name="app_name">MadarSoft</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_locations">Previous Data</string>
    <string name="add">Add +</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="day">Day:</string>
    <string name="night">Night:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="description">Description:</string>
    <string name="speed">Speed:</string>
    <string name="deg">Deg:</string>
    <string name="cloud">Clouds:</string>
    <string name="snow">Snow:</string>
    <string name="rain">Rain:</string>
    <string name="no_saved_data">No Saved Data</string>
    <string name="title_activity_maps">Map</string>
    <string name="number_of_saved_locations">Number of Saved Locations:</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="saving_place">Saving Place....</string>
    <string name="place_saved">Place Has Been Saved</string>
</resources>
